--- a/composer.json
+++ b/composer.json
@@ -58,5 +58,8 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "vimeo/psalm": "^4.3"
     }
 }
